docs/www/style.css
@charset "UTF-8";

body {
	font-family: Verdana, Tahoma, Arial, Times New Roman;
	font-size: 1rem;
	padding: 0;
	margin: 0;
	color: black;
	line-height: 1.5;
}

h1 {
	font-size: 1.5rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

h2 {
	font-size: 1.25rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

h3 {
	font-size: 1.125rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

.header {
	font-size: 1.75rem;
	font-family: Verdana, Tahoma, Arial, Times New Roman;
	font-weight: bold;
	font-style: italic;
	vertical-align: center;
	text-align: center;
	white-space: nowrap;
}

hr.divider {
	border: none;
	border-top: 0.625rem solid #8bb5b2;
}

.logo-img {
	padding-left: 1.625rem;
	padding-top: 0.375rem;
}

.header-container {
	display: flex;
	align-items: center;
	width: 100%;
}

.header-logo {
	width: 25%;
	flex-shrink: 0;
}

.header-title {
	width: 50%;
	flex-shrink: 0;
	text-align: center;
}

.header-github {
	width: 25%;
	flex-shrink: 0;
	text-align: right;
}

.last-updated {
	vertical-align: bottom;
	font-style: italic;
}

footer {
	text-align: center;
	vertical-align: middle;
	padding-top: 0.875rem;
	padding-bottom: 0.875rem;
	background: #e6f9e6;
}

header {
	padding-top: 0.375rem;
	padding-bottom: 0.375rem;
	background: #e6f9e6;
}

.content-wrapper {
	display: flex;
	background-color: #ffffff;
	min-height: 28.125rem;
}

.content-wrapper nav {
	width: 25%;
	flex-shrink: 0;
}

.content-wrapper main {
	flex: 1;
	padding-left: 1.25rem;
	padding-right: 2.5rem;
}

.skip-link {
	position: absolute;
	top: -2.5rem;
	left: 0;
	background: #000;
	color: #fff;
	padding: 0.5rem;
	text-decoration: none;
	z-index: 100;
}

.skip-link:focus {
	top: 0;
}

.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border-width: 0;
}

.external-link-icon {
	font-size: 1.1em;
	margin-left: 0.2em;
	color: #0000EE;
	font-weight: bold;
}

